# RNovEmail

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
crates/rnovemail-admin/: Cargo.toml
crates/rnovemail-admin/src/: errors.rs  forms.rs  i18n.rs  lib.rs  models.rs  pages.rs  theme.rs
crates/rnovemail-api/: Cargo.toml
crates/rnovemail-api/src/: admin_pages.rs  admin_routes.rs  lib.rs  mail_routes.rs  middleware.rs  openapi.rs  router.rs  session.rs  session_routes.rs  user_pages.rs  webhook_routes.rs
crates/rnovemail-auth/: Cargo.toml
crates/rnovemail-auth/src/: errors.rs  lib.rs  rbac.rs  secrets.rs  token.rs
crates/rnovemail-bin/: Cargo.toml
crates/rnovemail-bin/src/: main.rs
crates/rnovemail-config/: Cargo.toml
crates/rnovemail-config/src/: lib.rs
crates/rnovemail-domain/: Cargo.toml
crates/rnovemail-domain/src/: audit.rs  domain.rs  email.rs  lib.rs  mailbox.rs  message.rs  provider.rs  user.rs
crates/rnovemail-observability/: Cargo.toml
crates/rnovemail-observability/src/: http.rs  lib.rs  logging.rs
crates/rnovemail-providers/: Cargo.toml
crates/rnovemail-providers/src/: errors.rs  lib.rs  provider.rs  resend.rs  routing.rs
crates/rnovemail-quality/: Cargo.toml
crates/rnovemail-quality/src/: complexity.rs  main.rs  no_prod_tests.rs
crates/rnovemail-store/: Cargo.toml
crates/rnovemail-store-rnmdb/: Cargo.toml
crates/rnovemail-store-rnmdb/src/: codec.rs  keys.rs  lib.rs  migrations.rs  repositories.rs  schema.rs
crates/rnovemail-store/src/: errors.rs  lib.rs  repositories.rs  unit_of_work.rs
crates/rnovemail-webhook/: Cargo.toml
crates/rnovemail-webhook/src/: events.rs  lib.rs  replay.rs  signature.rs
