[package]
name = "rnovemail-auth"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
argon2.workspace = true
base64.workspace = true
chacha20poly1305.workspace = true
rand.workspace = true
secrecy.workspace = true
serde.workspace = true
thiserror.workspace = true
zeroize.workspace = true
