[package]
name = "rnovemail-providers"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
async-trait.workspace = true
reqwest.workspace = true
rnovemail-domain = { path = "../rnovemail-domain" }
secrecy.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
