[package]
name = "rnovemail-providers"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
async-trait.workspace = true
chrono.workspace = true
reqwest.workspace = true
rnovemail-domain = { path = "../rnovemail-domain" }
rnovemail-webhook = { path = "../rnovemail-webhook" }
secrecy.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
