[package]
name = "rnovemail-webhook"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
base64.workspace = true
chrono.workspace = true
hex.workspace = true
hmac.workspace = true
serde.workspace = true
sha2.workspace = true
thiserror.workspace = true
